Selection & Bubble Sort added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,9 @@
                 android:value="" />
         </activity>
         <activity android:name=".SortingActivity"/>
+        <activity android:name=".BubbleSortActivity"/>
+        <activity android:name=".QuickSortActivity"/>
+        <activity android:name=".SelectionSortActivity"/>
     </application>
 
 </manifest>
