--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,16 +6,16 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@mipmap/algoicon"
+        android:label="AlgoRhythm"
+        android:roundIcon="@mipmap/algoicon"
         android:supportsRtl="true"
         android:theme="@style/Theme.MergeSort"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
+            android:label="AlgoRhythm"
             android:theme="@style/Theme.MergeSort">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,7 +28,10 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-        <activity android:name=".SortingActivity"/>
+        <activity android:name=".AlgorithmsActivity"/>
+        <activity android:name=".GraphActivity"/>
+        <activity android:name=".SortActivity"/>
+        <activity android:name=".MergeSortActivity"/>
         <activity android:name=".BubbleSortActivity"/>
         <activity android:name=".QuickSortActivity"/>
         <activity android:name=".SelectionSortActivity"/>
