--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="AlgoRhythm"
+            android:label="SortViz"
             android:theme="@style/Theme.MergeSort">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
